examples(drill-downs): fix menu overflow behaviour

--- a/examples/drill-downs/dashboard-app/public/style.css
+++ b/examples/drill-downs/dashboard-app/public/style.css
@@ -492,6 +492,8 @@ ul {
         padding: 0;
     }
 
+    
+
     .dropdown-button {
         width: auto;
         min-width: 150px;
@@ -537,11 +539,18 @@ ul {
         width: auto;
         min-width: 240px;
         height: auto;
-        max-height: var(--menu-max-height);
         clip: auto;
         overflow-y: auto;
         scrollbar-width: thin;
         z-index: 9999;
+    }
+
+    .dropdown-button[aria-expanded="true"]~.dropdown-content.menu-list{
+        max-height: var(--menu-max-height);
+    }
+
+    .dropdown-button[aria-expanded="true"]~.dropdown-content.menu-list.overflow{
+        max-height: var(--menu-overflow-max-height);
     }
 
     .dropdown-list-item>* {
